argocd-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: eg
  listeners:
  - protocol: HTTP
    port: 80
    name: argo-http
    allowedRoutes:
      namespaces:
        from: Same
  - protocol: TLS
    port: 443
    name: argo-https
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: argocd-tls
  namespace: argocd
spec:
  hostnames:
    - argocd.lan
  parentRefs:
  - name: argocd-gateway
    namespace: argocd
  rules:
  - backendRefs:
    - name: argo-cd-argocd-server
      port: 443
